--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Future Laboratory</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Roboto+Mono&family=Source+Code+Pro&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
-<link rel="icon" href="hero.jpeg" type="image/x-icon">
+<link rel="icon" href="https://th.bing.com/th/id/OIG.sCWsqEIj7WSTSRZn3T0q?w=1024&h=1024&rs=1&pid=ImgDetMain" type="image/x-icon">
 
 
 
