--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ body{
 
 <div class="card-container" id="paragraph1">
     <div class="card">
-      <img src="https://th.bing.com/th/id/OIG.QtcVSlhnSWCrzkrlu88W?pid=ImgGn" alt="Card Image">
+      <img src="f1.jpg" alt="Card Image">
       <div class="card-content">
         <h3>Custom Large Language Models</h3>
         <p>We work on custom multimodular Large Language Models.</p>
@@ -411,7 +411,7 @@ body{
     </div>
 
     <div class="card">
-      <img src="https://th.bing.com/th/id/OIG.QtcVSlhnSWCrzkrlu88W?pid=ImgGn" alt="Card Image">
+      <img src="f2.jpg" alt="Card Image">
       <div class="card-content">
         <h3>Data Science</h3>
         <p>Data processing and refining is one of our core expertise.</p>
@@ -419,7 +419,7 @@ body{
     </div>
 
     <div class="card">
-      <img src="https://th.bing.com/th/id/OIG.QtcVSlhnSWCrzkrlu88W?pid=ImgGn" alt="Card Image">
+      <img src="f3.jpg" alt="Card Image">
       <div class="card-content">
         <h3>Full Stack</h3>
         <p>Digital presence is very important for businesses so we help them with full and robust web design and deployment.</p>
@@ -427,7 +427,7 @@ body{
     </div>
 
     <div class="card">
-      <img src="https://th.bing.com/th/id/OIG.QtcVSlhnSWCrzkrlu88W?pid=ImgGn" alt="Card Image">
+      <img src="f4.jpg" alt="Card Image">
       <div class="card-content">
         <h3>Tailoring Solutions for Your Unique Integration Needs</h3>
         <p>Discover a new level of integration with our custom API solutions. Whether you're enhancing communication between systems or building a robust platform.</p>
@@ -435,7 +435,7 @@ body{
     </div>
 
     <div class="card">
-      <img src="https://th.bing.com/th/id/OIG.QtcVSlhnSWCrzkrlu88W?pid=ImgGn" alt="Card Image">
+      <img src="f5.jpg" alt="Card Image">
       <div class="card-content">
         <h3>Custom Vision AI Models for Unmatched Accuracy</h3>
         <p>Step into the future of visual intelligence with our personalized Vision AI Models. We specialize in tailoring models that go beyond the ordinary, providing unparalleled accuracy and insight. </p>
@@ -443,7 +443,7 @@ body{
     </div>
 
     <div class="card">
-      <img src="https://th.bing.com/th/id/OIG.QtcVSlhnSWCrzkrlu88W?pid=ImgGn" alt="Card Image">
+      <img src="f6.jpg" alt="Card Image">
       <div class="card-content">
         <h3>Database Designs for Optimal Performance</h3>
         <p>Experience data management like never before with our custom database design solutions. From organizing information to optimizing retrieval, our meticulously crafted designs are tailored to suit your specific needs.</p>
