--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ body{
     </div>
 
     <div class="card">
-      <img src="f6.jpg" alt="Card Image">
+      <img src="f6.png" alt="Card Image">
       <div class="card-content">
         <h3>Database Designs for Optimal Performance</h3>
         <p>Experience data management like never before with our custom database design solutions. From organizing information to optimizing retrieval, our meticulously crafted designs are tailored to suit your specific needs.</p>
