--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ body{
 </script>
 
 <div class="head-content" >
-    <h1 id="typing-container">Welcome to the Future Laboratory..</h1>
+    <h1 id="typing-container">Welcome to {Future Laboratory} ..</h1>
 </div>
 
 <div class="sub-head-content">
