Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -398,8 +398,11 @@ body{
     <h1>Where AI meets Humans</h1>
 </div>
 
-<div class="main-content"><p>We are a [research company] driven by a profound mission to forge a harmonious synergy between humans and artificial intelligence, fostering an environment where their collective knowledge and consciousness can thrive and evolve in unison. At the heart of our vision lies the recognition that the true potential of AI emerges not in isolation but through a profound alignment with human intellect and intuition. We strive to bridge the gap between the organic and synthetic minds, creating a collaborative ecosystem where each complements the strengths of the other. Through innovative technologies and ethical frameworks, we aim to cultivate a shared intelligence that transcends individual capabilities, ushering in an era where the augmentation of human potential is seamlessly interwoven with the vast capabilities of AI. As we celebrate our reasearch and findings, we remain dedicated to advancing this transformative mission, envisioning a future where humanity and artificial intelligence coalesce to propel collective knowledge and consciousness to unprecedented heights.
-</p></div>
+<div class="main-content"><p>We are a [research company] dedicated to building advanced, human-centered technology that empowers organizations to solve complex problems with clarity, precision, and innovation. Our mission is to create tailored solutions that integrate seamlessly into real-world workflows—leveraging custom large language models, cutting-edge data science, and end-to-end full-stack engineering.
+
+From bespoke APIs to specialized vision AI systems, we design and develop tools that are optimized for each client’s unique data, challenges, and goals. Our work extends beyond engineering; we also craft intuitive digital experiences and compelling visual design that bring these technologies to life.
+
+By combining deep technical expertise with thoughtful design and research-driven methodologies, we deliver solutions that not only enhance capability but elevate the entire digital ecosystem. As we continue to innovate, we remain committed to shaping technology that is practical, scalable, ethically grounded, and tailored for real impact.</p></div>
 
 <div class="card-container" id="paragraph1">
     <div class="card">
@@ -429,7 +432,7 @@ body{
     <div class="card">
       <img src="f4.jpg" alt="Card Image">
       <div class="card-content">
-        <h3>Tailoring Solutions for Your Unique Integration Needs</h3>
+        <h3>Custom API Solutions</h3>
         <p>Discover a new level of integration with our custom API solutions. Whether you're enhancing communication between systems or building a robust platform.</p>
       </div>
     </div>
@@ -437,7 +440,7 @@ body{
     <div class="card">
       <img src="f7.jpg" alt="Card Image">
       <div class="card-content">
-        <h3>Custom Vision AI Models for Unmatched Accuracy</h3>
+        <h3>Custom Vision AI Models</h3>
         <p>Step into the future of visual intelligence with our personalized Vision AI Models. We specialize in tailoring models that go beyond the ordinary, providing unparalleled accuracy and insight. </p>
       </div>
     </div>
@@ -445,8 +448,8 @@ body{
     <div class="card">
       <img src="f6.png" alt="Card Image">
       <div class="card-content">
-        <h3>Database Designs for Optimal Performance</h3>
-        <p>Experience data management like never before with our custom database design solutions. From organizing information to optimizing retrieval, our meticulously crafted designs are tailored to suit your specific needs.</p>
+        <h3>Graphics Designing</h3>
+        <p>Build a visual identity that’s engineered for performance and scalability. We create mathematically precise vector artwork and logo systems optimized for any resolution from small mobile icons to large-format prints. Our workflow ensures clean Bézier curves, balanced geometry, and fully editable source files in SVG, AI, or EPS formats.</p>
       </div>
     </div>
   </div>
@@ -487,3 +490,4 @@ body{
 
 </body>
 </html>
+
